<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/paramfond"/>

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_parametre_titre"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:textColor="@color/white"
        android:textSize="45dp"
        android:fontFamily="@font/roboto_black"/>


    <Button
        android:id="@+id/retour"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/case1"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/black"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/page_parametre_record"

        app:layout_constraintTop_toTopOf="@id/case1"
        app:layout_constraintBottom_toBottomOf="@id/case1"
        app:layout_constraintRight_toRightOf="@id/case1"
        app:layout_constraintLeft_toLeftOf="@id/case1"
        />

    <ImageView
        android:id="@+id/case2"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/black"

        app:layout_constraintTop_toBottomOf="@id/case1"

        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/page_parametre_etoile"

        app:layout_constraintTop_toTopOf="@id/case2"
        app:layout_constraintBottom_toBottomOf="@id/case2"
        app:layout_constraintRight_toRightOf="@id/case2"
        app:layout_constraintLeft_toLeftOf="@id/case2"
        />

    <ImageView
        android:id="@+id/case3"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/black"

        app:layout_constraintTop_toBottomOf="@id/case2"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/page_parametre_credit"

        app:layout_constraintTop_toTopOf="@id/case3"
        app:layout_constraintBottom_toBottomOf="@id/case3"
        app:layout_constraintRight_toRightOf="@id/case3"
        app:layout_constraintLeft_toLeftOf="@id/case3"
        />





</androidx.constraintlayout.widget.ConstraintLayout>