<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--  On utilise un fond blanc  -->
    <ImageView
        android:id="@+id/fondR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pop_up_regle"
        android:background="@color/trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/page_fin_regle_regle"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintLeft_toLeftOf="@id/fondR"
        app:layout_constraintRight_toRightOf="@id/fondR"
        app:layout_constraintTop_toTopOf="@id/fondR" />

    <TextView
        android:id="@+id/vie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vieString"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/TextColor"
        app:layout_constraintRight_toRightOf="@id/fondR"
        app:layout_constraintLeft_toLeftOf="@id/fondR"
        app:layout_constraintTop_toBottomOf="@id/rules"
        android:layout_marginTop="5dp"/>

    <SeekBar
        android:id="@+id/seekBarVie"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="4"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/vie"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempsString"
        android:gravity="center"
        android:textColor="@color/TextColor"
        android:textSize="32sp"
        android:textStyle="bold"

        app:layout_constraintRight_toRightOf="@id/fondR"
        app:layout_constraintLeft_toLeftOf="@id/fondR"
        app:layout_constraintTop_toBottomOf="@id/vie"
        android:layout_marginTop="25dp"/>

    <SeekBar
        android:id="@+id/seekBarTemps"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="2"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/temps"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/appliquer"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bouton_applique"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_black"

        android:text="@string/page_fin_appliquer"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/fondR"
        app:layout_constraintLeft_toLeftOf="@id/fondR"
        app:layout_constraintRight_toRightOf="@id/fondR"
        />

</androidx.constraintlayout.widget.ConstraintLayout>